# vigia

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  create_test_user.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 30788b2fc561_cria_tabelas_iniciais_de_conversas_.py  41513ea888f2_cria_tabelas_iniciais_de_conversas_.py  a1e7a18af953_cria_tabelas_iniciais_de_conversas_.py  cb409be1301e_cria_tabelas_iniciais_de_conversas_.py
core/: tools.py
dashboard/: dashboard.py  requirements.txt
db/: models.py  session.py
lib/: uuid.py
scripts/: batch_analyzer.py  historical_importer.py  reanalyze_conversation.py
vigia/: config.py  main_api.py  worker.py
vigia/agents/: context_agent.py  director_agent.py  guard_agent.py  manager_agent.py  sentiment_agents.py  specialist_agents.py
vigia/api/: dependencies.py  schemas.py
vigia/api/routers/: auth.py  chat.py  cpj_data.py  negotiations.py  processes.py  system.py
vigia/api/routers/actions/: negotiation_actions.py  process_actions.py
vigia/core/: general_orchestrator.py  orchestrator.py
vigia/departments/chatwoot_assistant/: chatwoot_api.py  commands.py  orchestrator.py  tools.py
vigia/departments/negotiation_email/adapters/: email_repository.py  graph_api_adapter.py
vigia/departments/negotiation_email/agents/: __init__.py  base_llm_agent.py  context_agents.py  director_agent.py  extraction_adversarial_agents.py  extraction_manager_agent.py  extraction_specialist_agents.py  formal_summarizer_agent.py  judicial_jury_agents.py  judicial_negotiation_advisor_agent.py  legal_context_agent.py  run_ai_jury_pipeline.py  temperature_agents.py
vigia/departments/negotiation_email/auth/: __init__.py  token_provider.py
vigia/departments/negotiation_email/core/: orchestrator.py  tools.py
vigia/departments/negotiation_email/dashboard/: Dockerfile  dashboard.py  requirements.txt
vigia/departments/negotiation_email/dto/: __init__.py  email_dto.py
vigia/departments/negotiation_email/legal_cpj/: sync_cpj.py
vigia/departments/negotiation_email/ports/: email_repository_port.py  graph_client_port.py
vigia/departments/negotiation_email/scripts/: batch_analyzer.py  cron_sync.py  historical_importer.py  reanalyze_thread.py
vigia/departments/negotiation_email/services/: cpj_service.py  discord_notifier.py  email_importer_service.py  process_analysis_service.py  process_orchestrator_service.py  run_transit_analysis_for_process.py
vigia/departments/negotiation_email/utils/: __init__.py  json_safety.py  jusbr_utils.py  pipedrive_context_mapper.py  text_parser.py
vigia/departments/negotiation_whatsapp/agents/: audio_agent.py  context_agent.py  director_agent.py  guard_agent.py  manager_agent.py  sentiment_agents.py  specialist_agents.py
vigia/departments/negotiation_whatsapp/core/: orchestrator.py  tools.py
vigia/departments/negotiation_whatsapp/dashboard/: Dockerfile  dashboard.py
vigia/departments/negotiation_whatsapp/scripts/: batch_analyzer.py  crash_guard.py  debug_downloader.py  decrypt_whatsapp_media.py  historical_importer.py  reanalyze_conversation.py  resource_monitor.py  transcribe_audio_with_whisper.py
vigia/services/: __init__.py  chat_service.py  crud.py  database_service.py  graph_service.py  jusbr_service.py  llm_service.py  pipedrive_service.py  pje_headless_server.py  pje_worker.py  redis_service.py  utils.py
vigia/tasks/: __init__.py  jusbr_tasks.py  whisper_worker.py
vigia/utils/: main_utils.py
