[tool.poetry]
name = "vigia"
version = "0.1.0"
description = "Agente Supervisor de IA para monitoramento de negociações."
authors = ["Seu Nome <seu-email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
redis = "^5.0.7"
celery = "^5.4.0"
openai = "^1.35.3"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.3.4"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
psycopg2-binary = "^2.9.9" # Driver do PostgreSQL
requests = "^2.32.4"
google-generativeai = "^0.8.5"
sqlalchemy = "^2.0.41"
alembic = "^1.16.4"
httpx = "^0.28.1"
asyncio = "^3.4.3"
uuid7 = "^0.1.0"
plotly = "^6.2.0"
streamlit = "^1.47.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
