[tool.poetry]
name        = "vigia"
version     = "0.1.0"
description = "Agente Supervisor de IA para monitoramento de negociações."
authors     = ["Matheus Munhoz"]
readme      = "README.md"

[tool.poetry.dependencies]
python             = "^3.12"

# ------------- web / worker -------------
fastapi            = "^0.116.1"
uvicorn            = { extras = ["standard"], version = "^0.35.0" }
redis              = "^6.2.0"
celery             = "^5.5.3"

# ------------- IA / dados --------------
openai             = "^1.97.1"
openai-whisper     = {version = "^20250625", optional = true}
google-generativeai = "^0.8.5"
scikit-learn       = "^1.7.1"
pandas             = "^2.3.1"
numba              = "^0.61.2"
plotly             = "^6.2.0"
streamlit          = "^1.47.0"
tiktoken           = "^0.9.0"
numpy              = "<2"

# ------------- HTML --------------
beautifulsoup4     = "^4.13.4"

# ------------- infra -------------
sqlalchemy         = "^2.0.42"
psycopg2-binary    = "^2.9.10"
alembic            = "^1.16.4"
httpx              = "^0.28.1"
python-dotenv      = "^1.1.1"
pydantic-settings  = "^2.10.1"
structlog          = "^25.4.0"
uuid7             = "^0.1.0"
pycryptodome       = "^3.23.0"
requests           = "^2.32.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
